[gd_scene load_steps=14 format=3 uid="uid://dqyb5mcbjj74r"]

[ext_resource type="Script" uid="uid://b6phvxomoncwb" path="res://entities/frosch.gd" id="1_4c1uq"]
[ext_resource type="Texture2D" uid="uid://cucgvcseewhho" path="res://assets/Frog/FJump1.png" id="2_ohjip"]
[ext_resource type="Texture2D" uid="uid://bpjh5uavesh0r" path="res://assets/Frog/FQuak.png" id="3_xk8md"]
[ext_resource type="Texture2D" uid="uid://dcbgvmh3nlx0x" path="res://assets/Frog/FAttack1.png" id="4_eiwgd"]
[ext_resource type="Texture2D" uid="uid://c3r15qv10e03i" path="res://assets/Frog/FAttack2.png" id="5_beuuq"]
[ext_resource type="Texture2D" uid="uid://du8xxk4ced2k6" path="res://assets/Frog/FJump2.png" id="6_4bfmj"]
[ext_resource type="Texture2D" uid="uid://bg50ayiesgfcr" path="res://assets/Frog/FJump3.png" id="7_28u0m"]
[ext_resource type="Texture2D" uid="uid://slyvcxl4kbme" path="res://assets/Frog/FJump4.png" id="8_u1lsf"]
[ext_resource type="Texture2D" uid="uid://e0er3eiltals" path="res://assets/Frog/FHurt.png" id="9_t1dhb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qdd5j"]
radius = 44.493874
height = 162.8638

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uv11l"]
radius = 45.310883
height = 233.20508

[sub_resource type="SpriteFrames" id="SpriteFrames_wq0h2"]
animations = [{
"frames": [{
"duration": 1.01,
"texture": ExtResource("2_ohjip")
}, {
"duration": 1.01,
"texture": ExtResource("3_xk8md")
}, {
"duration": 0.51,
"texture": ExtResource("4_eiwgd")
}, {
"duration": 1.11,
"texture": ExtResource("5_beuuq")
}, {
"duration": 3.01,
"texture": ExtResource("2_ohjip")
}],
"loop": true,
"name": &"attack",
"speed": 4.0
}, {
"frames": [{
"duration": 3.01,
"texture": ExtResource("2_ohjip")
}, {
"duration": 1.0,
"texture": ExtResource("3_xk8md")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ohjip")
}, {
"duration": 1.0,
"texture": ExtResource("6_4bfmj")
}, {
"duration": 1.0,
"texture": ExtResource("7_28u0m")
}, {
"duration": 1.0,
"texture": ExtResource("8_u1lsf")
}, {
"duration": 1.0,
"texture": ExtResource("2_ohjip")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ohjip")
}, {
"duration": 2.01,
"texture": ExtResource("9_t1dhb")
}],
"loop": true,
"name": &"recovery",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fwrp6"]
radius = 371.65167

[node name="frosch" type="CharacterBody2D"]
position = Vector2(20, 0)
scale = Vector2(0.2, 0.2)
collision_layer = 4
collision_mask = 9
script = ExtResource("1_4c1uq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7.000001, 73.00001)
rotation = 1.3613569
shape = SubResource("CapsuleShape2D_qdd5j")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="AttackTongue" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(20, 50)
rotation = 1.0471976
shape = SubResource("CapsuleShape2D_uv11l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wq0h2")
animation = &"jump"
frame_progress = 0.06507642

[node name="VisionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="Vision" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("CircleShape2D_fwrp6")

[node name="Timers" type="Node2D" parent="."]

[node name="GetHitDelay" type="Timer" parent="Timers"]
wait_time = 0.6
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_vision_area_body_exited"]
